# NMservices

./: .dockerignore  .env.example  .gitattributes  .gitignore  ADMIN_API.md  ADMIN_PANEL_TECH_SPEC.md  CHANGELOG_ADMIN_API.md  DEPLOYMENT.md  Dockerfile  LICENSE  MERGE_GUIDE.md  QUICKSTART_ADMIN.md  QUICKSTART_DEPLOY.md  README.md  SORTING_SETUP_SUMMARY.md  SPEC.md  TESTING.md  pyproject.toml  structure.txt
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 5f637e23bc5d_add_telegram_id_to_users.py  6f83ab8ac77e_initial_schema.py  a1b2c3d4e5f6_add_language_code_to_users.py  b2c3d4e5f6a7_add_services_table.py  c3d4e5f6a7b8_extend_orders_table.py  d4e5f6a7b8c9_seed_services_data.py  e5f6a7b8c9d0_add_notified_status_to_orders.py  f6a7b8c9d0e1_add_payments_table.py
doc/: DOCS_INDEX.md  README.md  REFACTORING.md  Separate Bot & Service Project.md
docs/: ARCHITECTURE_FINAL_RESPONSE.md  ARCHITECTURE_QUESTIONS_ANSWERS.md  README.md  database-schema-mvp.md  session-context-mvp-services.md
docs/admin/: ADMIN_API.md  CHANGELOG_CORS.md  CHANGELOG_SORTING.md  CORS_SETUP_SUMMARY.md  QUICKSTART_ADMIN.md
docs/archive/: SUMMARY.md
docs/deployment/: DEPLOYMENT.md  postgresql-deployment.md
docs/development/: DATABASE_SETUP.md  DB_TESTING.md  NETWORK_TESTING.md  TROUBLESHOOTING_DB.md  database-schema-mvp.md
docs/git/: GIT_WORKFLOW_GUIDE.md  PR_DESCRIPTION.md  QUICK_MERGE.md
docs/onboarding/: ONBOARDING_GUIDE.md  QUICKSTART_DEPLOY.md
docs/tasks/: MVP+_extend_schema.md  MVP_PLAN.md  MVP_services_table.md  TODO_pydantic_v2_config.md
scripts/: README.md  check_database.sql  db_cli.py  deploy.sh  diagnose_db_issue.py  init_db.sql  recreate_database.py  test_admin_api.py  test_admin_api.sh  test_api.ps1  test_api.sh  test_api_01.sh  test_cors.sh  test_orders.py  test_registration.py  test_sorting.sh  verify_mvp_steps2_4.sh
src/nms/: config.py  database.py  main.py  models.py
src/nms/api/: __init__.py  dependencies.py  orders.py  payment.py  services.py  users.py  webhooks.py
src/nms/api/admin/: orders.py  services.py  users.py
src/nms/models/: __init__.py  admin.py  db_models.py  order.py  payment.py  service.py  user.py
src/nms/services/: auth.py  order.py  payment.py  telegram_notifier.py
src/nms/templates/: checkout.html
tests/: conftest.py  test_admin_services.py  test_main.py  test_services.py
