[project]
name = "nms"
version = "0.1.0"
description = "Microservices for NoMus"
authors = [{ name = "Dimitrii Chrm", email = "im.chrm@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.123.4,<0.124.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
]

[tool.poetry]
packages = [{ include = "nms", from = "src" }]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.7"
pytest = "^9.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
# запуск: poetry run python -m nomus.main
nomus = "nms.main:run"

[tool.poetry.scripts]
# запуск как скрипт (не рекомендуется): poetry run start-bot
start-bot = "nms.main:run"

[tool.pylint.messages_control]
# C0303: Trailing whitespace
disable = """
    trailing-whitespace,
    missing-module-docstring
"""
