[project]
name = "nms"
version = "0.6.0"
description = "Microservices for NoMus"
authors = [{ name = "Dimitrii Chrm", email = "im.chrm@gmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.123.4,<0.124.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.0.0,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "asyncpg (>=0.29.0,<0.30.0)",
    "sqlalchemy[asyncio] (>=2.0.0,<3.0.0)",
    "alembic (>=1.13.0,<2.0.0)",
]

[tool.poetry]
name = "nms"
packages = [{ include = "nms", from = "src" }]
package-mode = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.7"
pytest = "^8.2.0"
pytest-asyncio = "^0.24.0"
aiosqlite = "^0.20.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
# запуск: poetry run python -m nms.main
# nms = "nms.main:run"
nms = "nms.main:run"

[tool.poetry.scripts]
# запуск как скрипт (не рекомендуется): poetry run start-bot
start-bot = "nms.main:run"

[tool.pylint.main]
init-hook = "import sys; sys.path.append('src')"

[tool.pylint.messages_control]
# C0303: Trailing whitespace
disable = """
    trailing-whitespace,
    missing-module-docstring
"""
